--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,14 @@
 <resources>
     <string name="app_name">MoneyManager</string>
+    <string name="fragment_income">Income</string>
     <string name="available_budget">Available Budget</string>
     <string name="total_spend">Total Spend</string>
     <string name="balance">Balance</string>
     <string name="record">Record</string>
+    <string name="currency">MYR</string>
+    <string name="amount_hint">Amount</string>
+    <string name="choose_category">Choose Category</string>
+    <string name="note_hint">note</string>
+    <string name="add">Add</string>
+    <string name="cancel">Cancel</string>
 </resources>
