--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
-    <string name="app_name">MoneyManager</string>
-    <string name="fragment_income">Income</string>
+    <string name="app_name">Money Manager</string>
     <string name="available_budget">Available Budget</string>
     <string name="total_spend">Total Spend</string>
     <string name="balance">Balance</string>
@@ -11,4 +10,6 @@
     <string name="note_hint">note</string>
     <string name="add">Add</string>
     <string name="cancel">Cancel</string>
+    <string name="title_income">Income</string>
+    <string name="title_expenses">Expenses</string>
 </resources>
