--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="cancel">Cancel</string>
     <string name="title_income">Income</string>
     <string name="title_expenses">Expenses</string>
+    <string name="new_Income">New Income</string>
 </resources>
