--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,10 @@
     <string name="break_down">Break Down</string>
     <string name="income_detail">Income Detail</string>
     <string name="expenses_detail">Expenses Detail</string>
+    <string name="category">Category</string>
+    <string name="category_hint">Category Name</string>
+    <string name="category_type">Choose Category Type</string>
+    <string name="income">Income</string>
+    <string name="expenses">Expenses</string>
+    <string name="save">Save</string>
 </resources>
