--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="income_detail">Income Detail</string>
     <string name="expenses_detail">Expenses Detail</string>
     <string name="category">Category</string>
+    <string name="new_category">New Category</string>
     <string name="category_hint">Category Name</string>
     <string name="category_type">Choose Category Type</string>
     <string name="income">Income</string>
