--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,5 @@
     <string name="income">Income</string>
     <string name="expenses">Expenses</string>
     <string name="save">Save</string>
-    <string name="delete_category">Delete Category</string>
+    <string name="delete_category">Delete Item</string>
 </resources>
