--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="category_hint">Category Name</string>
     <string name="category_type">Choose Category Type</string>
     <string name="income">Income</string>
-    <string name="expenses">Expenses</string>
+    <string name="expense">Expense</string>
     <string name="save">Save</string>
     <string name="delete_category">Delete Item</string>
     <string name="date_picker_title">Date of Crime:</string>
