--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,6 @@
     <string name="take_photo">Add Photo</string>
     <string name="save">Save</string>
     <string name="delete_category">Delete Item</string>
-    <string name="date_picker_title">Date of Crime:</string>
-    <string name="time_picker_title">Time of Crime:</string>
+    <string name="date_picker_title">Date:</string>
+    <string name="time_picker_title">Time:</string>
 </resources>
